# HELIOS-3D

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  Makefile  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  SESSION-STATE.md  SOUL.md  TOOLS.md  UBIQUITOUS_LANGUAGE.md  USER.md  VALIDATION_STATUS.md  agents.md  astro.config.mjs  makefile  mkdocs.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml
.github/: issues.md
analysis/: AGENTS.md  __init__.py  validate_erc_data.py
app/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ascii/: AGENTS.md  helios-banner.md  helios-big.md  helios-doom.md  icon-sun.md  section-architecture.md  section-claims.md  section-crisis.md  section-deploy.md  section-getting-started.md  section-repo.md  section-status.md
compiler/: __init__.py  mapping.py  mock_adapter.py  protocols.py
data/: AGENTS.md  README.md  erc_core_temp_tolerance.synthetic.csv
docs/: ABSTRACT.md  AGENTS.md  ALTERNATIVE_MATERIALS_AND_METHODS.md  CANDIDATE_MATERIALS_AND_MECHANISMS.md  CLAIMS_MATRIX.md  CORE_ARCHITECTURE.md  DEFENSIVE_FRAMEWORK.md  DEPLOYMENT.md  GLOSSARY.md  HELIOS-3D-SITE-REDESIGN.md  LITERATURE_REVIEW.md  MATHEMATICS.md  OPEN_QUESTIONS.md  PITCH_DECK_OUTLINE.md  PROPOSED_FABRICATION_PATH_AND_CONTROL.md  READING_GUIDE.md  REFERENCES.md  TARGETS_COMPARATORS_AND_PROJECTIONS.md  index.md
e2e/: home.spec.ts
notebooks/: README.md  helios_hybrid_graph_miner.ipynb
research_specifications/: module_2_super_moire_engineering.md  (+6 more)
(+254 files in other folders)
