[project]
name = "helios-3d"
version = "0.1.0"
description = "HELIOS-3D research documentation site"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "networkx>=3.6.1",
  "numpy>=2.4.4",
  "pandas>=3.0.2",
  "requests>=2.33.1",
  "scikit-learn>=1.8.0",
  "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "analysis", "compiler"]
# simulations contains non-Python MuMax3/OOMMF configs; exclude from wheel

[project.optional-dependencies]
research = [
  "pandas>=2.0",
  "requests>=2.28",
  "networkx>=3.0",
  "scikit-learn>=1.3",
  "numpy>=1.24",
  "tqdm>=4.65",
]

[dependency-groups]
dev = [
  "pytest",
  "mdformat"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_validator.py"]
